# test-bashshell

./: crypto.py  pyproject.toml  task.py  util.py  wrapper.sh
.github/workflows/: register.yml  routine.yml
register/: register_apps_by_force.sh
