[tool.poetry]
authors = ["infodepartment"]
description = "powershelltest"
name = "powershelltest"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.1"
pycryptodome = "^3.10.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
rope = "^0.19.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.1.0"]
